<resources>
    <string name="app_name">LoftMoney</string>
    <string name="txt_goods">Name</string>
    <string name="name_price">Price</string>
    <string name="txt_add">Add</string>
    <string name="Start">START</string>
    <string name="template_price" translatable="false">%1$s ₽</string>
    <string name="budget_title">Учет бюджета</string>
    <string name="hello_blank_fragment">fragment_text</string>
    <string name="outcome">Расходы</string>
    <string name="income">Доходы</string>
    <string name="title_hint">ВВедите название</string>
    <string name="enter_button_title">Войти</string>
    <string name="remove_title">Удалить</string>
    <string name="remove_confirmation">Вы действительно хотите удалить выбраные элементы?</string>
    <string name="selected">Выделено: %1$s</string>
    <string name="balance">Баланс</string>
    <string name="finances">Доступные финансы</string>

</resources>
