<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItemActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/button_add"
        android:paddingStart="@dimen/paddingStartLinear"
        android:paddingEnd="@dimen/paddingEndLinear"
        android:paddingBottom="@dimen/paddingBottomLinear">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/goods"
                style="@style/editStylePortrait"
                android:layout_width="match_parent"
                android:textColor="@color/medium_grey"
                android:layout_height="wrap_content"
                android:text="@string/txt_goods">
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Price">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_price"
                style="@style/editStylePortrait"
                android:textColor="@color/medium_grey"
                android:text="@string/name_price"
                android:layout_marginTop="@dimen/marginTopEditPrice"
                android:hint="@string/name_price"
                android:inputType="number">
            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>




    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:text="@string/txt_add"
        android:textColor="@color/add_button_color_inactive" />

</RelativeLayout>