<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="37dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="14sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"
        android:textColor="@color/medium_grey"
        android:gravity="end"
        android:text="@string/finances"/>
    <TextView
        android:id="@+id/total_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/pale_orange"
        android:gravity="end"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:text="67000₽"
        />

    <View
        android:layout_marginTop="37dp"
        android:background="@color/divider_color"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_weight="1"
        android:paddingTop="41dp"
        android:paddingBottom="27dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"
        android:textColor="@color/medium_grey"
        android:gravity="end"
        android:text="@string/outcome"
        />
    <TextView
        android:id="@+id/expense_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/dark_sky_blue"
        android:gravity="end"
        tools:text="5400₽"
        />
    </LinearLayout>
        <View
            android:background="@color/divider_color"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_weight="1"
        android:paddingTop="41dp"
        android:paddingBottom="27dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="normal"
        android:textColor="@color/medium_grey"
        android:gravity="end"
        tools:text="@string/income"
        />
    <TextView
        android:id="@+id/income_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/apple_green"
        android:gravity="end"
        tools:text="74000₽"
        />
    </LinearLayout>
    </LinearLayout>
    <View
        android:background="@color/divider_color"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

    <com.loftschool.alexandrdubkov.myapplication.DiagramView
        android:id="@+id/diagramView"
        android:layout_marginTop="36dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:expenseColor="@color/dark_grey_blue"
        app:incomeColor="@color/colorAccent"/>

</LinearLayout>
</android.support.v4.widget.NestedScrollView>